# ts-alevel-courser

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  add_teacher_account.py  auto_add_pastpapers.py  docker-compose.yml  fetch_pastpapers.py  main.py  pdf_analyzer.py  populate_data.py  populate_data_v2.py  pyproject.toml
.github/workflows/: docker-image.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
docker/: entrypoint.sh
pastpaper/: admin.py  context_processors.py  models.py  permissions.py  urls.py  views.py
pastpaper/migrations/: 0001_initial.py  0002_add_pastpaper_tag.py  0003_alter_usertag_save_rename_save_usertag_saved.py  0004_unit_syllabus_page.py  0005_alter_subject_syllabus_url.py
static/admin/js/: question_admin.js
static/css/: style.css
static/images/: default_avatar.txt
static/js/: main.js  themes.json
templates/: base.html
templates/accounts/: login.html  profile.html  register.html
templates/admin/: app_list.html  index.html
templates/pastpaper/: create_question.html  feedback.html  home.html  mydetails.html  theme_settings.html
